--- a/mysite/templates/base.html
+++ b/mysite/templates/base.html
@@ -1,25 +1,30 @@
-{% load static %}<!DOCTYPE html>
+{% load static %}
+<!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="utf-8">
-    <title>{% block title %}Let's Grade Essays{% endblock %}</title>
-    <link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}">
-  </head>
-  <body>
 
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-      <div class="container">
-        <a class="navbar-brand" href="{% url 'index' %}">Essays</a>
-      </div>
-    </nav>
+<head>
+  <meta charset="utf-8">
+  <title>{% block title %}Essay Grader{% endblock %}</title>
+  <link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}">
+</head>
 
+<body>
+
+  <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
     <div class="container">
-      <ol class="breadcrumb my-4">
-        {% block breadcrumb %}
-        {% endblock %}
-      </ol>
-      {% block content %}
-      {% endblock %}
+      <a class="navbar-brand" href="{% url 'index' %}">Essay Grader</a>
+      <a class="btn btn-outline-success" href="{% url 'submit' %}">Submit an essay</a>
     </div>
-  </body>
+  </nav>
+
+  <div class="container">
+    <ol class="breadcrumb my-4">
+      {% block breadcrumb %}
+      {% endblock %}
+    </ol>
+    {% block content %}
+    {% endblock %}
+  </div>
+</body>
+
 </html>
